<resources>
    <string name="app_name">AppTugas</string>
    <string name="tugas_ku_com">tugas ku .com</string>
    <string name="cari_buku">Cari Buku</string>
    <string name="isbn">ISBN</string>
    <string name="buku_agama">Buku agama</string>
    <string name="buku_komputer">Buku komputer</string>
    <string name="novel">Novel</string>
    <string name="lain_lain">Lain - lain</string>
    <string name="jumlah">Jumlah:</string>
    <string name="kode_warna_hex">Kode Warna (HEX)</string>
    <string name="kualitas">Kualitas</string>
    <string name="rangkuman">Rangkuman</string>
    <string name="judul_buku">Judul Buku</string>



    <string-array name="tahun">
        <item>1990</item>
        <item>1991</item>
        <item>1992</item>
        <item>1993</item>
        <item>1994</item>
        <item>1995</item>
        <item>1996</item>
        <item>1997</item>
        <item>1998</item>
        <item>1999</item>
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>

    </string-array>

    <string-array name="penerbit">
        <item>Gramedia</item>
        <item>Kompas</item>
        <item>Elex</item>
        <item>Gagas media</item>

    </string-array>


</resources>
